--- a/client/src/components/DetailsHeader/detailsHeader.module.css
+++ b/client/src/components/DetailsHeader/detailsHeader.module.css
@@ -11,6 +11,7 @@
   padding: 1rem;
   border-bottom: 0.2rem solid var(--gray-1);
   transition: all 0.3s linear;
+  cursor: pointer;
 }
 
 .headerItem:hover {
